--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
     <div class="container-fluid">
         <div class="navbar-wrapper">
-          <a class="navbar-brand font-weight-bolder" style="font-size: 24px;"  >Admin {{getTitle()}}</a>
+          <a class="navbar-brand font-weight-bolder" style="font-size: 24px;"> {{getTitle()}}</a>
         </div>
         <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
             <span class="sr-only">Toggle navigation</span>
@@ -10,7 +10,7 @@
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form class="navbar-form">
+            <!-- <form class="navbar-form">
                 <div class="input-group input-group shadow border px-4 py-2 bg-white rounded">
                     <input type="text" value="" class="form-control" placeholder="Search...">
                     <button mat-raised-button type="submit" class="btn btn-white btn-round shadow-none btn-just-icon">
@@ -18,7 +18,7 @@
                         <div class="ripple-container"></div>
                     </button>
                 </div>
-            </form>
+            </form> -->
             <ul class="navbar-nav px-3">
 <!--                <li class="nav-item">-->
 <!--                    <a class="nav-link"  >-->
