--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+
+@import '~ngx-toastr/toastr.css';
 /* You can add global styles to this file, and also import other style files */
 .card-icon{
     background: #e2b142 !important;
@@ -13,4 +15,8 @@
     margin-bottom: -1em;
     font-size: 1.1rem;
     vertical-align: middle;
+}
+#toast-container > div {
+    opacity:1;
+    z-index: 1000;
 }
