--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -206,10 +206,10 @@
 
 <!-- new code  -->
 
-<div class="main-content mx-4">
-    <div class="container-fluid">  
+<div class="main-content mx-4 pt-0">
+    <div class="container-fluid bg-white shadow rounded pt-3">
         <div class="row" >
-            <div class="col-lg-7 px-4 pt-4 pb-3  bg-white shadow rounded" style="height: 80vh;
+            <div class="col-lg-7 px-4 pt-4 pb-3  " style="height: 80vh;
       overflow: auto;">
   
                 <div class="row"  [formGroup]="recipeForm">
@@ -256,10 +256,10 @@
 
 
                     </div> -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 d-flex justify-content-center align-items-center">
                         <div *ngIf="avatarURL" class="position-relative ">
-                            <img class="mx-auto border-4  border-b-gray-800 rounded-circle" [src]="avatarURL"  >
-                            <button style="top: 23px;right: 26px;" class="position-absolute text-primary bg-white rounded shadow" mat-button (click)="removeImg()"><mat-icon >cancel</mat-icon>
+                            <img class="mx-auto border-4  border-b-gray-800 w-100" [src]="avatarURL"  >
+                            <button style="top: 6px;right: 6px; background: red;" class="position-absolute text-white rounded shadow" mat-button (click)="removeImg()"><mat-icon >cancel</mat-icon>
                              </button> 
                         </div>
                         <input #file type="file" accept='image/*' [hidden]="true" (change)="onFileChange($event)" />
@@ -267,13 +267,13 @@
                     </div>
   
                 </div>
-                <div class="row mt-3">
-                    <div class="col-lg-12 text-center">
-                        <button mat-fab class="btn-primary" type="button" (click)="addIngrediants()" aria-label="Example icon button with a delete icon">
-                            <mat-icon>add</mat-icon>
-                        </button>
-                    </div>
-                </div>
+<!--                <div class="row mt-3">-->
+<!--                    <div class="col-lg-12 text-center">-->
+<!--                        <button mat-fab class="btn-primary" type="button" (click)="addIngrediants()" aria-label="Example icon button with a delete icon">-->
+<!--                            <mat-icon>add</mat-icon>-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
                 
         <div [formGroup]="recipeForm">
                 <div formArrayName="ingrediants">
@@ -365,12 +365,7 @@
   
             </div>
   </div>
-  <div class="text-right mb-3 mt-4 pt-5 me-3">
-    <button mat-raised-button class="mr-3 text-white bg-secondary" (click)="onSubmit()" [disabled]="isFormValid()">
-        Submit
-    </button>
 
-</div>
 </div>
   
             <div class="col-lg-5">
@@ -413,8 +408,21 @@
   
   
         </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="text-right float-end mb-3  me-3">
+                    <button mat-raised-button class="mr-3 text-white bg-secondary" (click)="onSubmit()" [disabled]="isFormValid()">
+                        Submit
+                    </button>
+
+                </div>
+            </div>
         </div>
-        </div>
+
+
+    </div>
+</div>
   
   
   
@@ -491,4 +499,3 @@
   
     </div>
   </div> -->
-  
