--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -18,3 +18,7 @@
 .mat-form-field-wrapper{
     padding-bottom: 0px !important;
 }
+
+.card-stats .card-header.card-header-icon, .card-stats .card-header.card-header-text {
+    text-align: justify !important;
+}
