--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,31 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="card card-stats">
-                  <div class="card-header card-header-warning card-header-icon">
+                  <div class="card-header text-start card-header-warning card-header-icon">
                       <div class="card-icon">
-                          <i class="material-icons">verified_user</i>
+                          <img src="assets/img/apple-icon-.png" />
                       </div>
-                      <p class="card-category">Admin</p>
-                      <h3 class="card-title">5
-                      </h3>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <div class="">
+                              <label class="mt-3">
+                                  My Device
+                              </label>
+                              <h3 class="card-title">SMART
+                                  KITCHEN APPLIANCE
+                              </h3>
+                          </div>
+                          <button class="btn-primary btn text-end"  mat-raised-button>
+                              <mat-icon style="line-height: 23px;">add</mat-icon>
+                              Add Device
+                          </button>
+
+                      </div>
+
+
+
+
                   </div>
                   <div class="card-footer">
                       <div class="stats">
@@ -18,54 +34,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-success card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">supervised_user_circle </i>
-                      </div>
-                      <p class="card-category">Customers</p>
-                      <h3 class="card-title">46</h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">update</i> Just Updated
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header  card-header-icon">
-                      <div class="card-icon">
-                          <i class="fa fa-users"></i>
-                      </div>
-                      <p class="card-category">Overall Users</p>
-                      <h3 class="card-title">51</h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">update</i> Just Updated
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header  card-header-icon">
-                      <div class="card-icon- bg-danger">
-                          <i class="material-icons">block</i>
-                      </div>
-                      <p class="card-category mt-2">Blocked Users</p>
-                      <h3 class="card-title">3</h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">update</i> Just Updated
-                      </div>
-                  </div>
-              </div>
-          </div>
+
       </div>
       <div class="row">
           <div class="col-md-6">
