--- a/src/app/modules/recipeManagement/recipe-list/recipe.component.html
+++ b/src/app/modules/recipeManagement/recipe-list/recipe.component.html
@@ -1,7 +1,15 @@
 <div class="mt-5 px-5">
     <div class="row pt-5 mt-5">
-      <div class="col-lg-6">
-        <div class="text-2xl font-bold">Recipe List</div>
+      <div class="col-lg-12">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="text-2xl font-bold">Recipe List</div>
+          <button class="btn-primary btn" [routerLink]="['/recipeManagement/add-recipe']"  mat-raised-button>
+            <mat-icon style="line-height: 23px;">add</mat-icon>
+            Add Recipe
+          </button>
+        </div>
+
+
   
       </div>
     </div>
@@ -22,10 +30,7 @@
       </mat-form-field>
     </div> -->
       <div class="col-lg-12 text-end place-self-end">
-        <button color="primary" [routerLink]="['/recipeManagement/add-recipe']"  mat-raised-button>
-          <mat-icon>add</mat-icon>
-          Add Recipe
-        </button>
+
       </div>
     </div>
   
