--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
     <a href="https://www.SAMM.com" class="simple-text">
         <div class="logo-img">
-<!--            <img style="width: 200px;" src="/assets/img/logo.png"/>-->
+            <img style="width: 200px;" src="/assets/img/logo.png"/>
         </div>
     </a>
 </div>
