--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,40 +36,128 @@
           </div>
 
       </div>
+
+
+
+
+
+<div class="row mb-3">
+    <div class="col-lg-12">
+        <a _ngcontent-aur-c210="" class="navbar-brand font-weight-bolder" style="font-size: 24px;">My Recipes</a>
+    </div>
+</div>
+
       <div class="row">
-          <div class="col-md-6">
-              <div class="card card-chart">
-                  <div class="card-header card-header-success">
-                      <div class="ct-chart" id="dailySalesChart"></div>
+          <div id="carousel" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                  <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#carousel" data-slide-to="1"></li>
+              </ol>
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <div class="d-none d-lg-block">
+                          <div class="slide-box">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                          </div>
+                      </div>
+                      <div class="d-none d-md-block d-lg-none">
+                          <div class="slide-box">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                          </div>
+                      </div>
+                      <div class="d-none d-sm-block d-md-none">
+                          <div class="slide-box">
+                              <img src="https://picsum.photos/270/200/?image=0&random" alt="First slide">
+                              <img src="https://picsum.photos/270/200/?image=1&random" alt="First slide">
+                          </div>
+                      </div>
+                      <div class="d-block d-sm-none">
+                          <img class="d-block w-100" src="https://picsum.photos/600/400/?image=0&random" alt="First slide">
+                      </div>
                   </div>
-                  <div class="card-body">
-                      <h4 class="card-title">Daily Sales</h4>
-                      <p class="card-category">
-                          <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">access_time</i> updated 4 minutes ago
+                  <div class="carousel-item">
+                      <div class="d-none d-lg-block">
+                          <div class="slide-box">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                          </div>
+                      </div>
+                      <div class="d-none d-md-block d-lg-none">
+                          <div class="slide-box">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                              <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                          </div>
+                      </div>
+                      <div class="d-none d-sm-block d-md-none">
+                          <div class="slide-box">
+                              <img src="https://picsum.photos/270/200/?image=2&random" alt="Second slide">
+                              <img src="https://picsum.photos/270/200/?image=3&random" alt="Second slide">
+                          </div>
+                      </div>
+                      <div class="d-block d-sm-none">
+                          <img class="d-block w-100" src="https://picsum.photos/600/400/?image=1&random" alt="Second slide">
                       </div>
                   </div>
               </div>
-          </div>
-          <div class="col-md-6">
-              <div class="card card-chart">
-                  <div class="card-header card-header-info">
-                      <div class="ct-chart" id="completedTasksChart"></div>
-                  </div>
-                  <div class="card-body">
-                      <h4 class="card-title">Completed Tasks</h4>
-                      <p class="card-category">Last Campaign Performance</p>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">access_time</i> campaign sent 2 days ago
-                      </div>
-                  </div>
-              </div>
+              <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+              </a>
           </div>
       </div>
+
+
+
   </div>
 </div>
+
+
+<!--<div class="row">-->
+<!--    <div class="col-md-6">-->
+<!--        <div class="card card-chart">-->
+<!--            <div class="card-header card-header-success">-->
+<!--                <div class="ct-chart" id="dailySalesChart"></div>-->
+<!--            </div>-->
+<!--            <div class="card-body">-->
+<!--                <h4 class="card-title">Daily Sales</h4>-->
+<!--                <p class="card-category">-->
+<!--                    <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>-->
+<!--            </div>-->
+<!--            <div class="card-footer">-->
+<!--                <div class="stats">-->
+<!--                    <i class="material-icons">access_time</i> updated 4 minutes ago-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-md-6">-->
+<!--        <div class="card card-chart">-->
+<!--            <div class="card-header card-header-info">-->
+<!--                <div class="ct-chart" id="completedTasksChart"></div>-->
+<!--            </div>-->
+<!--            <div class="card-body">-->
+<!--                <h4 class="card-title">Completed Tasks</h4>-->
+<!--                <p class="card-category">Last Campaign Performance</p>-->
+<!--            </div>-->
+<!--            <div class="card-footer">-->
+<!--                <div class="stats">-->
+<!--                    <i class="material-icons">access_time</i> campaign sent 2 days ago-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
