--- a/src/app/modules/recipeManagement/recipe-list/recipe.component.html
+++ b/src/app/modules/recipeManagement/recipe-list/recipe.component.html
@@ -13,6 +13,59 @@
   
       </div>
     </div>
+
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <div class="card card-stats">
+        <div class="card-header text-start card-header-warning card-header-icon">
+          <div class="card-icon">
+            <img src="assets/img/ecipe.avif" style="width: 200px;" />
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="">
+              <label class="mt-3">
+                ID: 101
+              </label>
+              <h3 class="card-title">Milk Tea
+              </h3>
+              <p class="text-primary">
+                leomessi Description
+              </p>
+            </div>
+            <div class="">
+              <button class="btn-primary btn text-end mr-3"  mat-raised-button>
+                <mat-icon style="line-height: 23px;">create</mat-icon>
+
+              </button>
+              <button class=" btn text-end"  style="background:red;" mat-raised-button>
+                <mat-icon style="line-height: 23px;">delete_forever</mat-icon>
+
+              </button>
+            </div>
+
+          </div>
+
+
+
+
+        </div>
+        <div class="card-footer">
+          <div class="stats">
+            <i class="material-icons">update</i> Just Updated
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+
+
+
+
+
+
     <div class="row mb-3 mt-3">
       <!-- <div class="col-lg-6">
       <mat-form-field class="mr-3">
