--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -215,6 +215,10 @@
                 <div class="row"  [formGroup]="recipeForm">
   
                     <div class="col-lg-6">
+                        <i class="material-icons mb-3">
+                            keyboard_backspace
+                        </i>
+
                         <mat-form-field class="w-100 " appearance="outline">
                             <mat-label>Enter Recipe Name</mat-label>
                             <input matInput placeholder="Enter Name"
