--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -418,7 +418,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-right float-end mb-3  me-3">
-                    <button mat-raised-button class="mr-3 text-white bg-secondary" (click)="onSubmit()" [disabled]="isFormValid()">
+                    <!-- [disabled]="isFormValid()" -->
+                    <button mat-raised-button class="mr-3 text-white bg-secondary" (click)="onSubmit()" >
                         Submit
                     </button>
 
