--- a/src/app/modules/recipeManagement/recipe-list/recipe.component.html
+++ b/src/app/modules/recipeManagement/recipe-list/recipe.component.html
@@ -1,4 +1,4 @@
-<div class="mt-5 px-5">
+<div class="mt-5 px-5 mb-5">
     <div class="row pt-5 mt-5">
       <div class="col-lg-12">
         <div class="d-flex justify-content-between align-items-center">
@@ -14,51 +14,7 @@
       </div>
     </div>
 
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12">
-      <div class="card card-stats">
-        <div class="card-header text-start card-header-warning card-header-icon">
-          <div class="card-icon">
-            <img src="assets/img/ecipe.avif" style="width: 200px;" />
-          </div>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="">
-              <label class="mt-3">
-                ID: 101
-              </label>
-              <h3 class="card-title">Milk Tea
-              </h3>
-              <p class="text-primary">
-                leomessi Description
-              </p>
-            </div>
-            <div class="">
-              <button class="btn-primary btn text-end mr-3"  mat-raised-button>
-                <mat-icon style="line-height: 23px;">create</mat-icon>
-
-              </button>
-              <button class=" btn text-end"  style="background:red;" mat-raised-button>
-                <mat-icon style="line-height: 23px;">delete_forever</mat-icon>
-
-              </button>
-            </div>
-
-          </div>
-
-
-
-
-        </div>
-        <div class="card-footer">
-          <div class="stats">
-            <i class="material-icons">update</i> Just Updated
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
+  
 
 
 
@@ -89,7 +45,55 @@
   
   
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort class="mat-table">
+      <div *ngFor="let row of dataSource?.data" class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="card card-stats">
+            <div class="card-header text-start card-header-warning card-header-icon">
+              <div class="card-icon">
+                <img [src]="getImg(row.recipe_pic)" style="width: 200px;" />
+              </div>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="">
+                  <!-- <label class="mt-3">
+                    ID: {{row.recipe_id}}
+                  </label> -->
+                  <h3 class="card-title">{{row.recipe_name}}
+                  </h3>
+                  <p class="text-primary">
+                    {{row.recipe_description}}
+                  </p>
+                </div>
+                <div class="">
+                  <button type="button" class="btn-primary btn text-end mr-3" [routerLink]="['/recipeManagement/add-recipe/',row.recipe_id]"  mat-raised-button>
+                    <mat-icon style="line-height: 23px;">create</mat-icon>
+    
+                  </button>
+                  <button type="button" class=" btn text-end mr-3"  style="background:red;" (click)="onDelete(row.recipe_id)" mat-raised-button>
+                    <mat-icon style="line-height: 23px;">delete_forever</mat-icon>
+    
+                  </button>
+                  <button type="button" class=" btn text-end"  style="background:black;" mat-raised-button>
+                    Cook Now!
+                   </button>
+                </div>
+    
+              </div>
+    
+    
+    
+    
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons">update</i> Just Updated
+              </div>
+            </div>
+          </div>
+        </div>
+    
+      </div>
+    
+      <table hidden mat-table [dataSource]="dataSource" matSort class="mat-table">
         <ng-container matColumnDef="recipe_id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
           <td mat-cell *matCellDef="let row">
