--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -54,7 +54,7 @@
                   <li data-target="#carousel" data-slide-to="1"></li>
               </ol>
               <div class="carousel-inner">
-                  <div class="carousel-item active">
+                  <div class="carousel-item active" data-bs-interval="1000">
                       <div class="d-none d-lg-block">
                           <div class="slide-box">
                               <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
