--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -279,111 +279,19 @@
 <!--                    </div>-->
 <!--                </div>-->
                 
-        <div [formGroup]="recipeForm">
-                <div formArrayName="ingrediants">
-                <div *ngFor="let employee of ingrediants().controls; let empIndex = index" class="row shadow rounded px-4 pt-4 mt-4" 
-                  style="background:#c7c7c730;"  >
-                    <div class="col-lg-12" [formGroupName]="empIndex">
-                        <h3>{{ recipeForm.get('ingrediants')?.at(empIndex)?.get('ingrediant_type')?.value }}</h3>
-                        <mat-icon mat-icon-button (click)="removeIngrediants(empIndex)"
-                        class="text-red-600 text-4xl" style="height: auto; width: auto;">cancel
-              </mat-icon>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <mat-form-field class="w-100 " appearance="outline" >
-                                    <mat-label>Enter Ingredient Name</mat-label>
-                                    <input matInput  maxlength="500"
-                                    [formControlName]="'ingrediant_name'">
-                                <mat-error *ngIf="FormArrayHasError('ingrediant_name', 'required',empIndex)">Ingredient Name <strong>required</strong></mat-error>
-
-                                </mat-form-field>
-                            </div>
-                            <!-- <div class="col-lg-4">
-                                <mat-form-field class="w-100" appearance="outline" >
-                                    <mat-label>Select Type</mat-label>
-                                    <mat-select disabled (selectionChange)="valueChange($event,empIndex)" maxlength="500"
-                                    [formControlName]="'ingrediant_type'"
-                                    placeholder="Type" >
-                                        <mat-option *ngFor="let obj of TypeLov" [value]="obj.value">
-                                            {{obj.heading}}
-                                          </mat-option>
-                                    </mat-select>
-                                    <mat-error *ngIf="FormArrayHasError('ingrediant_type', 'required',empIndex)">Ingredient Type <strong>required</strong></mat-error>
-                                </mat-form-field>
-                            </div> -->
-                            <div class="col-lg-4">
-                                <mat-form-field class="w-100 " appearance="outline">
-                                    <mat-label>Enter Cooking Time</mat-label>
-                                    <input matInput  maxlength="500"
-                                    [formControlName]="'ingrediant_cooking_time'"
-                                    placeholder="Cooking Time">
-                                <mat-error *ngIf="FormArrayHasError('ingrediant_cooking_time', 'required',empIndex)">Cooking time <strong>required</strong></mat-error>
-                                </mat-form-field>
-                           </div>
-                            <div class="col-lg-4">
-                                <mat-form-field class="w-100 " appearance="outline"  >
-                                    <mat-label>Enter Quantity</mat-label>
-                                    <input matInput maxlength="500"
-                                    [formControlName]="'ingrediant_quantity'"
-                                    placeholder="Quantity">
-                                    <mat-error *ngIf="FormArrayHasError('ingrediant_quantity', 'required',empIndex)">Ingredient Quantity <strong>required</strong></mat-error>
-                            </mat-form-field>
-                            </div>
-                        </div>
-  
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <mat-form-field class="w-100 " appearance="outline" >
-                                    <mat-label>Enter Cooking Temperature</mat-label>
-                                    <input matInput  maxlength="500"
-                                    [formControlName]="'ingrediant_temperature'"
-                                    placeholder="Temperature">
-                                    <mat-error *ngIf="FormArrayHasError('ingrediant_temperature', 'required',empIndex)">Ingredient Temperature <strong>required</strong></mat-error>
-                            </mat-form-field>
-                            </div>
-                            <div class="col-lg-4">
-                                <mat-form-field class="w-100 " appearance="outline">
-                                    <mat-label> Cooking Speed</mat-label>
-                                    <mat-select matInput
-                                                maxlength="500"
-                                                [formControlName]="'ingrediant_steering_type'"
-                                                placeholder="Cooking Speed">
-                                        <mat-option value="1">
-                                            Low
-                                        </mat-option>
-                                        <mat-option value="2">
-                                            Medium
-                                        </mat-option>
-                                        <mat-option value="3">
-                                            High
-                                        </mat-option>
-    
-                                    </mat-select>
-                                    <mat-error *ngIf="FormArrayHasError('ingrediant_steering_type', 'required',empIndex)">Cooking speed <strong>required</strong></mat-error>
-                           </mat-form-field>
-                            </div>
-                           
-                        </div>
-                    </div>
-  
-  
-                </div>
-  
-            </div>
-  </div>
+   
 
 </div>
   
             <div class="col-lg-5">
-  
                     <div class="d-flex">
-                        <div type='button' class="glass-effect  card-icon" style="width: 140px; height:75px;" (click)="addIngrediants('B1')">B1</div>
-                        <div type='button' class="glass-effect  card-icon" style="width: 180px; height:75px;" (click)="addIngrediants('B2')">B2</div>
-                        <div  type='button'class="glass-effect  card-icon" style="width: 140px; height:75px;" (click)="addIngrediants('B3')">B3</div>
+                        <div type='button' [ngClass]="getStyle('B1')" style="width: 140px; height:75px;" (click)="addIngrediants('B1')">B1</div>
+                        <div type='button' [ngClass]="getStyle('B2')" style="width: 180px; height:75px;" (click)="addIngrediants('B2')">B2</div>
+                        <div  type='button'[ngClass]="getStyle('B3')" style="width: 140px; height:75px;" (click)="addIngrediants('B3')">B3</div>
                     </div>
   
-                    <div class="d-flex  ">
-                        <div type='button' class="glass-effect card-icon" style="width: 140px; height:200px;" (click)="addIngrediants('B4')">B4</div>
+                    <div class="d-flex ">
+                        <div type='button' [ngClass]="getStyle('B4')" style="width: 140px; height:200px;" (click)="addIngrediants('B4')">B4</div>
                         <div type='button'  class="glass-effect" style="width: 180px; height:200px;">
   
                             <div class="d-flex" style="flex-wrap: wrap; justify-content: center;">
@@ -400,13 +308,13 @@
   
   
                         </div>
-                        <div type='button' class="glass-effect card-icon" style="width: 140px; height:200px;" (click)="addIngrediants('B5')">B5</div>
+                        <div type='button' [ngClass]="getStyle('B5')" style="width: 140px; height:200px;" (click)="addIngrediants('B5')">B5</div>
                     </div>
   
                     <div class="d-flex">
-                        <div type='button' class="glass-effect card-icon" style="width: 140px; height:75px;" (click)="addIngrediants('B6')">B6</div>
-                        <div type='button' class="glass-effect card-icon" style="width: 180px; height:75px;" (click)="addIngrediants('B7')">B7</div>
-                        <div type='button' class="glass-effect card-icon" style="width: 140px; height:75px;" (click)="addIngrediants('B8')">B8</div>
+                        <div type='button' [ngClass]="getStyle('B6')" style="width: 140px; height:75px;" (click)="addIngrediants('B6')">B6</div>
+                        <div type='button' [ngClass]="getStyle('B7')" style="width: 180px; height:75px;" (click)="addIngrediants('B7')">B7</div>
+                        <div type='button' [ngClass]="getStyle('B8')" style="width: 140px; height:75px;" (click)="addIngrediants('B8')">B8</div>
                     </div>
   
   
@@ -414,6 +322,100 @@
   
   
         </div>
+
+        
+        <div [formGroup]="recipeForm">
+            <div formArrayName="ingrediants">
+            <div *ngFor="let employee of ingrediants().controls; let empIndex = index" class="row shadow rounded px-4 pt-4 mt-4" 
+              style="background:#c7c7c730;"  >
+                <div class="col-lg-12" [formGroupName]="empIndex">
+                    <h3>{{ recipeForm.get('ingrediants')?.at(empIndex)?.get('ingrediant_type')?.value }}</h3>
+                    <mat-icon mat-icon-button (click)="removeIngrediants(empIndex,recipeForm.get('ingrediants')?.at(empIndex)?.get('ingrediant_type')?.value)"
+                    class="text-red-600 text-4xl" style="height: auto; width: auto;">cancel
+          </mat-icon>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <mat-form-field class="w-100 " appearance="outline" >
+                                <mat-label>Enter Ingredient Name</mat-label>
+                                <input matInput  maxlength="500"
+                                [formControlName]="'ingrediant_name'">
+                            <mat-error *ngIf="FormArrayHasError('ingrediant_name', 'required',empIndex)">Ingredient Name <strong>required</strong></mat-error>
+
+                            </mat-form-field>
+                        </div>
+                        <!-- <div class="col-lg-4">
+                            <mat-form-field class="w-100" appearance="outline" >
+                                <mat-label>Select Type</mat-label>
+                                <mat-select disabled (selectionChange)="valueChange($event,empIndex)" maxlength="500"
+                                [formControlName]="'ingrediant_type'"
+                                placeholder="Type" >
+                                    <mat-option *ngFor="let obj of TypeLov" [value]="obj.value">
+                                        {{obj.heading}}
+                                      </mat-option>
+                                </mat-select>
+                                <mat-error *ngIf="FormArrayHasError('ingrediant_type', 'required',empIndex)">Ingredient Type <strong>required</strong></mat-error>
+                            </mat-form-field>
+                        </div> -->
+                        <div class="col-lg-4">
+                            <mat-form-field class="w-100 " appearance="outline">
+                                <mat-label>Enter Cooking Time</mat-label>
+                                <input matInput  maxlength="500"
+                                [formControlName]="'ingrediant_cooking_time'"
+                                placeholder="Cooking Time">
+                            <mat-error *ngIf="FormArrayHasError('ingrediant_cooking_time', 'required',empIndex)">Cooking time <strong>required</strong></mat-error>
+                            </mat-form-field>
+                       </div>
+                        <div class="col-lg-4">
+                            <mat-form-field class="w-100 " appearance="outline"  >
+                                <mat-label>Enter Quantity</mat-label>
+                                <input matInput maxlength="500"
+                                [formControlName]="'ingrediant_quantity'"
+                                placeholder="Quantity">
+                                <mat-error *ngIf="FormArrayHasError('ingrediant_quantity', 'required',empIndex)">Ingredient Quantity <strong>required</strong></mat-error>
+                        </mat-form-field>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <mat-form-field class="w-100 " appearance="outline" >
+                                <mat-label>Enter Cooking Temperature</mat-label>
+                                <input matInput  maxlength="500"
+                                [formControlName]="'ingrediant_temperature'"
+                                placeholder="Temperature">
+                                <mat-error *ngIf="FormArrayHasError('ingrediant_temperature', 'required',empIndex)">Ingredient Temperature <strong>required</strong></mat-error>
+                        </mat-form-field>
+                        </div>
+                        <div class="col-lg-4">
+                            <mat-form-field class="w-100 " appearance="outline">
+                                <mat-label> Cooking Speed</mat-label>
+                                <mat-select matInput
+                                            maxlength="500"
+                                            [formControlName]="'ingrediant_steering_type'"
+                                            placeholder="Cooking Speed">
+                                    <mat-option value="1">
+                                        Low
+                                    </mat-option>
+                                    <mat-option value="2">
+                                        Medium
+                                    </mat-option>
+                                    <mat-option value="3">
+                                        High
+                                    </mat-option>
+
+                                </mat-select>
+                                <mat-error *ngIf="FormArrayHasError('ingrediant_steering_type', 'required',empIndex)">Cooking speed <strong>required</strong></mat-error>
+                       </mat-form-field>
+                        </div>
+                       
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+</div>
 
         <div class="row">
             <div class="col-lg-12">
