--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -215,7 +215,7 @@
                 <div class="row"  [formGroup]="recipeForm">
   
                     <div class="col-lg-6">
-                        <i class="material-icons mb-3">
+                        <i type="button"  [routerLink]="['/recipeManagement']" class="material-icons mb-3">
                             keyboard_backspace
                         </i>
 
@@ -295,15 +295,15 @@
                         <div type='button'  class="glass-effect" style="width: 180px; height:200px;">
   
                             <div class="d-flex" style="flex-wrap: wrap; justify-content: center;">
-                                <div type='button' class="glass-effect bg-secondary" style="width: 45px; height:45px;" (click)="addIngrediants('S1')">S1</div>
+                                <div type='button' [ngClass]="getStyle2('S1')" style="width: 45px; height:45px;" (click)="addIngrediants('S1')">S1</div>
                                 <div type='button' class="glass-effect  bg-primary" style="width: 45px; height:45px;" ></div>
-                                <div type='button' class="glass-effect  bg-secondary" style="width: 45px; height:45px;" (click)="addIngrediants('S2')">S2</div>
-                                <div type='button' class="glass-effect bg-secondary" style="width: 45px; height:45px;" (click)="addIngrediants('S3')">S3</div>
+                                <div type='button' [ngClass]="getStyle2('S2')" style="width: 45px; height:45px;" (click)="addIngrediants('S2')">S2</div>
+                                <div type='button' [ngClass]="getStyle2('S3')" style="width: 45px; height:45px;" (click)="addIngrediants('S3')">S3</div>
                                 <div type='button' class="glass-effect  bg-primary" style="width: 45px; height:45px;" ></div>
-                                <div type='button' class="glass-effect  bg-secondary" style="width: 45px; height:45px;" (click)="addIngrediants('S4')">S4</div>
-                                <div type='button' class="glass-effect bg-secondary" style="width: 45px; height:45px;" (click)="addIngrediants('S5')">S5</div>
-                                <div type='button' class="glass-effect  bg-secondary" style="width: 45px; height:45px;" (click)="addIngrediants('S6')">S6</div>
-                                <div type='button' class="glass-effect  bg-secondary" style="width: 45px; height:45px;" (click)="addIngrediants('S7')">S7</div>
+                                <div type='button' [ngClass]="getStyle2('S4')" style="width: 45px; height:45px;" (click)="addIngrediants('S4')">S4</div>
+                                <div type='button' [ngClass]="getStyle2('S5')" style="width: 45px; height:45px;" (click)="addIngrediants('S5')">S5</div>
+                                <div type='button' [ngClass]="getStyle2('S6')" style="width: 45px; height:45px;" (click)="addIngrediants('S6')">S6</div>
+                                <div type='button' [ngClass]="getStyle2('S7')" style="width: 45px; height:45px;" (click)="addIngrediants('S7')">S7</div>
                             </div>
   
   
