--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -209,8 +209,7 @@
 <div class="main-content mx-4 pt-0">
     <div class="container-fluid bg-white shadow rounded pt-3">
         <div class="row" >
-            <div class="col-lg-7 px-4 pt-4 pb-3  " style="height: 80vh;
-      overflow: auto;">
+            <div class="col-lg-7 px-4 pt-4 pb-3  ">
   
                 <div class="row"  [formGroup]="recipeForm">
   
@@ -219,14 +218,14 @@
                             keyboard_backspace
                         </i>
 
-                        <mat-form-field class="w-100 " appearance="outline">
+                        <mat-form-field class="w-100 mb-3" appearance="outline">
                             <mat-label>Enter Recipe Name</mat-label>
                             <input matInput placeholder="Enter Name"
                             [formControlName]="'recipe_name'"
                             required>
                             <mat-error *ngIf="hasError('recipe_name', 'required')">Recipe Name <strong>required</strong></mat-error>
                         </mat-form-field>
-                        <mat-form-field class="w-100" appearance="outline" >
+                        <mat-form-field class="w-100 mb-3" appearance="outline" >
                             <mat-label>Enter Recipe Type</mat-label>
                             <mat-select maxlength="500"
                             [formControlName]="'recipe_type'"
@@ -240,7 +239,7 @@
                             </mat-select>
                             <mat-error *ngIf="hasError('recipe_type', 'required')">Recipe Type <strong>required</strong></mat-error>
                         </mat-form-field>
-                        <mat-form-field class="example-full-width w-100" appearance="outline">
+                        <mat-form-field class="example-full-width w-100 mb-3" appearance="outline">
                             <mat-label>Enter Recipe Description</mat-label>
                             <textarea matInput placeholder="Enter description"
                             [formControlName]="'recipe_description'"
@@ -326,13 +325,18 @@
         
         <div [formGroup]="recipeForm">
             <div formArrayName="ingrediants">
-            <div *ngFor="let employee of ingrediants().controls; let empIndex = index" class="row shadow rounded px-4 pt-4 mt-4" 
+            <div *ngFor="let employee of ingrediants().controls; let empIndex = index" class="mx-2 row shadow rounded px-4 py-3 mt-4"
               style="background:#c7c7c730;"  >
                 <div class="col-lg-12" [formGroupName]="empIndex">
-                    <h3>{{ recipeForm.get('ingrediants')?.at(empIndex)?.get('ingrediant_type')?.value }}</h3>
-                    <mat-icon mat-icon-button (click)="removeIngrediants(empIndex,recipeForm.get('ingrediants')?.at(empIndex)?.get('ingrediant_type')?.value)"
-                    class="text-red-600 text-4xl" style="height: auto; width: auto;">cancel
-          </mat-icon>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h3>{{ recipeForm.get('ingrediants')?.at(empIndex)?.get('ingrediant_type')?.value }}</h3>
+                        <mat-icon mat-icon-button (click)="removeIngrediants(empIndex,recipeForm.get('ingrediants')?.at(empIndex)?.get('ingrediant_type')?.value)"
+                                  class="text-red-600  text-4xl" style="height: auto; width: auto; color: red;">cancel
+                        </mat-icon>
+
+                    </div>
+
+
                     <div class="row">
                         <div class="col-lg-4">
                             <mat-form-field class="w-100 " appearance="outline" >
@@ -417,11 +421,11 @@
         </div>
 </div>
 
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-lg-12">
-                <div class="text-right float-end mb-3  me-3">
+                <div class="text-right float-end mb-3  me-5">
                     <!-- [disabled]="isFormValid()" -->
-                    <button mat-raised-button class="mr-3 text-white bg-secondary" (click)="onSubmit()" >
+                    <button mat-raised-button class="mr-5 text-white bg-secondary" (click)="onSubmit()" >
                         Submit
                     </button>
 
