--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -284,13 +284,18 @@
   
             <div class="col-lg-5">
                     <div class="d-flex">
-                        <div type='button' [ngClass]="getStyle('B1')" style="width: 140px; height:75px;" (click)="addIngrediants('B1')">B1</div>
-                        <div type='button' [ngClass]="getStyle('B2')" style="width: 180px; height:75px;" (click)="addIngrediants('B2')">B2</div>
-                        <div  type='button'[ngClass]="getStyle('B3')" style="width: 140px; height:75px;" (click)="addIngrediants('B3')">B3</div>
+                        <div type='button' [ngClass]="getStyle('B1')" style="width: 236px; height:75px;" (click)="addIngrediants('B1')">B1</div>
+                        <div type='button' [ngClass]="getStyle('B2')" style="width: 236px; height:75px;" (click)="addIngrediants('B2')">B2</div>
                     </div>
   
                     <div class="d-flex ">
-                        <div type='button' [ngClass]="getStyle('B4')" style="width: 140px; height:200px;" (click)="addIngrediants('B4')">B4</div>
+
+                        <div class="d-grid">
+                            <div type='button' [ngClass]="getStyle('B7')" style="width: 140px; height:98px;" (click)="addIngrediants('B7')">B7</div>
+                            <div type='button' [ngClass]="getStyle('B8')" style="width: 140px; height:98px;" (click)="addIngrediants('B8')">B8</div>
+
+                        </div>
+
                         <div type='button'  class="glass-effect" style="width: 180px; height:200px;">
   
                             <div class="d-flex" style="flex-wrap: wrap; justify-content: center;">
@@ -307,13 +312,22 @@
   
   
                         </div>
-                        <div type='button' [ngClass]="getStyle('B5')" style="width: 140px; height:200px;" (click)="addIngrediants('B5')">B5</div>
+                        <div class="d-grid">
+                            <div  type='button'[ngClass]="getStyle('B3')" style="width: 140px; height:98px;" (click)="addIngrediants('B3')">B3</div>
+
+                            <div type='button' [ngClass]="getStyle('B4')" style="width: 140px; height:98px;" (click)="addIngrediants('B4')">B4</div>
+
+                        </div>
+
+
                     </div>
   
                     <div class="d-flex">
-                        <div type='button' [ngClass]="getStyle('B6')" style="width: 140px; height:75px;" (click)="addIngrediants('B6')">B6</div>
-                        <div type='button' [ngClass]="getStyle('B7')" style="width: 180px; height:75px;" (click)="addIngrediants('B7')">B7</div>
-                        <div type='button' [ngClass]="getStyle('B8')" style="width: 140px; height:75px;" (click)="addIngrediants('B8')">B8</div>
+                        <div type='button' [ngClass]="getStyle('B5')" style="width: 236px; height:75px;" (click)="addIngrediants('B5')">B5</div>
+
+                        <div type='button' [ngClass]="getStyle('B6')" style="width: 236px; height:75px;" (click)="addIngrediants('B6')">B6</div>
+
+
                     </div>
   
   
