--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -19,10 +19,10 @@
         <div class="fxt-form-content">
             <div class="fxt-page-switcher">
                 <h2 class="fxt-page-title mr-3">Register</h2>
-                <ul class="fxt-switcher-wrap">
+                <!-- <ul class="fxt-switcher-wrap">
                     <li><a  class="fxt-switcher-btn  border-0 rounded shadow">Login</a></li>
                     <li><a  class="fxt-switcher-btn active border-0 rounded shadow">Register</a></li>
-                </ul>
+                </ul> -->
             </div>
             <div class="fxt-main-form">
                 <div class="fxt-inner-wrap">
@@ -113,8 +113,8 @@
                         </div>
                     </div>
 
-                    <div class="fxt-switcher-description mt-3">Don't have an account?
-                        <a class="fxt-switcher-text ms-1" >Register</a>
+                    <div class="fxt-switcher-description mt-3">Already have an account?
+                        <a class="fxt-switcher-text ms-1" routerLink = '/sign-in' >Sign In</a>
                     </div>
                 </div>
             </div>
