--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -41,7 +41,7 @@
   
   
   
-  <div class="row mb-3">
+  <!-- <div class="row mb-3">
       <div class="col-lg-12">
           <a _ngcontent-aur-c210="" class="navbar-brand font-weight-bolder" style="font-size: 24px;">My Recipes</a>
       </div>
@@ -79,7 +79,7 @@
                 </a>
             </div>
         </div>
-  
+   -->
   
   
     </div>
