--- a/src/app/modules/teamManagment/teamManagment/teamManagment.component.html
+++ b/src/app/modules/teamManagment/teamManagment/teamManagment.component.html
@@ -26,7 +26,7 @@
                       
                                     <img
                                       class="avatar-span border-0 d-inline-flex align-items-center justify-content-center text-white text-uppercase text-nowrap font-weight-normal"
-                                      [src]="getImg(row.profile_pic_path)" />
+                                      [src]="row.profile_pic_path" />
                       
                                     <!-- </span> -->
                                   </a>
